--- a/public/style.css
+++ b/public/style.css
@@ -14,7 +14,7 @@ body, html {
 
 .poker-table {
     height: 100vh;
-    background-image: url('/assets/sfondo_poker.jpg');
+    background-image: url('/assets/images/sfondo_poker.jpg');
     background-size: cover;
     background-position: center; 
     background-repeat: no-repeat; 
