--- a/public/style.css
+++ b/public/style.css
@@ -290,3 +290,8 @@ body, html {
     border-radius: 4px;
     color: white;
 }
+.puntata{
+    width: 20px;
+    height: 20px;
+    border-radius: 2px;
+}
