--- a/public/style.css
+++ b/public/style.css
@@ -216,6 +216,12 @@ body, html {
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
 
+#vincitore{
+    display: flex;
+    align-content: center;
+    justify-content: center;
+}
+
 #carte_mano {
     display: flex;
     justify-content: center;
